--- a/.gitmodules
+++ b/.gitmodules
@@ -4,8 +4,8 @@
 	branch = 2.0-master
 [submodule "kwbase/c-deps"]
 	path = kwbase/c-deps
-	url = ssh://git@devops.inspur.com:30004/ISG__ZDP/kw-cdeps.git
-	branch = 2.0-master-rocksdb
+	url = git@gitee.com:kwdb/kw-cdeps.git
+	branch = 3.0-master
 [submodule "kwdbts2/third_party"]
 	path = kwdbts2/third_party
 	url = https://gitee.com/kwdb/kw-third_party.git
