--- a/kwdbts2/CMakeLists.txt
+++ b/kwdbts2/CMakeLists.txt
@@ -200,15 +200,15 @@ generate_proto(${NART_PROTOS_META})
 generate_proto(${NART_PROTOS_EE})
 
 # rocksdb include dir
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROCKSDB_PLATFORM_POSIX -DROCKSDB_LIB_IO_POSIX")
-set(ROCKSDB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/../kwbase/c-deps/rocksdb/include ${CMAKE_CURRENT_SOURCE_DIR}/../kwbase/c-deps/rocksdb)
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROCKSDB_PLATFORM_POSIX -DROCKSDB_LIB_IO_POSIX")
+# set(ROCKSDB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/../kwbase/c-deps/rocksdb/include ${CMAKE_CURRENT_SOURCE_DIR}/../kwbase/c-deps/rocksdb)
 set(SNAPPY_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/../kwbase/c-deps/snappy)
 set(SNAPPY_LIB $ENV{GOPATH}/native/snappy/libsnappy.a)
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  set(ROCKSDB_LIB $ENV{GOPATH}/native/rocksdb_assert/librocksdb.a)
-else ()
-  set(ROCKSDB_LIB $ENV{GOPATH}/native/rocksdb/librocksdb.a)
-endif ()
+# if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+#   set(ROCKSDB_LIB $ENV{GOPATH}/native/rocksdb_assert/librocksdb.a)
+# else ()
+#   set(ROCKSDB_LIB $ENV{GOPATH}/native/rocksdb/librocksdb.a)
+# endif ()
 
 # include file of kwdbts2
 set(TS_INCLUDE
@@ -224,7 +224,6 @@ set(TS_INCLUDE
         mmap/include
         exec/include
         statistic/include
-        ${ROCKSDB_INCLUDE}
         ${SNAPPY_INCLUDE}
         )
 if (NOT KWBASE_OSS)
@@ -329,7 +328,7 @@ if (WITH_TESTS)
                 third_party/gtest-1.8.1/fused-src
                 )
 
-        target_link_libraries(${tname} ${KWDBTS2_SERVER_LIB} ${PROTOBUF_LIB} ${ROCKSDB_LIB} ${SNAPPY_LIB} common gtest dl rt)
+        target_link_libraries(${tname} ${KWDBTS2_SERVER_LIB} ${PROTOBUF_LIB} ${SNAPPY_LIB} common gtest dl rt)
         set_target_properties(${tname} PROPERTIES
                 CXX_STANDARD_REQUIRED YES
                 CXX_EXTENSIONS NO
