fix: Build snappy from source
1. Build snappy from source.
2. Remove the dependencies of unit tests and kdp_bench on kwbase.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,7 +217,7 @@ add_subdirectory(common)
 add_subdirectory(kwdbts2)
 
 # compile kwbase
-if (BUILD_KWBASE OR WITH_TESTS)
+if (BUILD_KWBASE)
     set(KWBASE_MAKEFILE "Makefile")
     if(NOT KWBASE_OSS)
         set(KWBASE_MAKEFILE "Makefile_ent")
