--- a/kwdbts2/CMakeLists.txt
+++ b/kwdbts2/CMakeLists.txt
@@ -302,9 +302,9 @@ if (WITH_TESTS)
   if (KWBASE_OSS)
       file(GLOB_RECURSE KWDBTS2_SERVER_TEST_SRC
               mmap/tests/*.cpp
-              storage/tests/*.cpp
+              #storage/tests/*.cpp
               exec/tests/*.cpp
-              engine/tests/*.cpp
+              #engine/tests/*.cpp
               ts_engine/tests/*.cpp
               statistic/tests/*.cpp
               )
