!808 kwdb deploy add configurations(brpc-addr). * kwdb deploy add configurations(brpc-addr).

--- a/kaiwudb_install/deploy.cfg
+++ b/kaiwudb_install/deploy.cfg
@@ -7,6 +7,8 @@ management_user=kaiwudb
 rest_port=8080
 # KaiwuDB service port
 kaiwudb_port=26257
+# KaiwuDB brpc port
+brpc_port=27257
 # KaiwuDB data directory
 data_root=/var/lib/kaiwudb
 # CPU usage[0-1]
