feat:修改公共代码位置、并修改ap接口目录

--- a/kwdbap/src/engine/CMakeLists.txt
+++ b/kwdbap/src/engine/CMakeLists.txt
@@ -1,7 +1,8 @@
 add_library_unity(
   duckdb_engine
   OBJECT
-  db.cpp)
+  db.cpp
+  duckdb_exec.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_engine>
     PARENT_SCOPE)
