--- a/kwdbts2/CMakeLists.txt
+++ b/kwdbts2/CMakeLists.txt
@@ -179,67 +179,15 @@ set(KWDBTS2_SERVER_LIB kwdbts2)
 
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
-function(generate_proto protofile)
-  message(STATUS "protofile:${protofile}")
-  get_filename_component(protofolder ${protofile} PATH)
-  get_filename_component(protoname ${protofile} NAME_WLE)
-  message(STATUS "protoname:${protoname}")
-  if (EXISTS "${protofolder}/${protoname}.pb.cc")
-      message("${protoname}.pb.cc is exists")
-      message("mkdir -p ${CMAKE_BINARY_DIR}/tmp")
-      message("cp -arf ${protofile} ${CMAKE_BINARY_DIR}/tmp/${protoname}.proto")
-      message("${PROTOBUF_C} ${CMAKE_BINARY_DIR}/tmp/${protoname}.proto --cpp_out=${CMAKE_BINARY_DIR}/tmp -I ${CMAKE_BINARY_DIR}/tmp -I ${protofolder}")
-      EXECUTE_PROCESS(
-          COMMAND mkdir -p ${CMAKE_BINARY_DIR}/tmp
-          COMMAND cp -arf ${protofile} ${CMAKE_BINARY_DIR}/tmp/
-          COMMAND ${PROTOBUF_C} ${CMAKE_BINARY_DIR}/tmp/${protoname}.proto --cpp_out=${CMAKE_BINARY_DIR}/tmp -I ${CMAKE_BINARY_DIR}/tmp -I ${protofolder}
-      )
-      message("check diff file ${CMAKE_BINARY_DIR}/tmp/${protoname}.pb.cc ${protofolder}/${protoname}.pb.cc")
-      EXECUTE_PROCESS(
-	      COMMAND diff ${CMAKE_BINARY_DIR}/tmp/${protoname}.pb.cc ${protofolder}/${protoname}.pb.cc
-	      COMMAND diff ${CMAKE_BINARY_DIR}/tmp/${protoname}.pb.h ${protofolder}/${protoname}.pb.h
-	      RESULT_VARIABLE changed
-	      OUTPUT_QUIET
-	      )
-      if ( ${changed} EQUAL 1)
-	      message(STATUS "${protofile} has changed")
-        EXECUTE_PROCESS(
-            COMMAND ${PROTOBUF_C} ${protofile} --cpp_out=${protofolder} -I ${protofolder}
-        )
-      else()
-	      message(STATUS "${protofile} has nothing to be done")
-      endif()
-      EXECUTE_PROCESS(
-         COMMAND rm -rf ${CMAKE_BINARY_DIR}/tmp
-      )
-  else()
-      message("${protoname}.pb.cc does not exist")
-      EXECUTE_PROCESS(
-          COMMAND ${PROTOBUF_C} ${protofile} --cpp_out=${protofolder} -I ${protofolder}
-      )
-  endif()
-endfunction(generate_proto)
-
-# Generate C++ files from proto files
-file(GLOB_RECURSE NART_PROTOS_EE
-  roachpb/ee_pb_plan.proto)
-file(GLOB_RECURSE NART_PROTOS_META
-  roachpb/me_metadata.proto)
-file(GLOB_RECURSE NART_PROTOS_BR
-  roachpb/br_internal_service.proto)
-generate_proto(${NART_PROTOS_META})
-generate_proto(${NART_PROTOS_EE})
-generate_proto(${NART_PROTOS_BR})
-
 # include file of kwdbts2
 set(TS_INCLUDE
         ../common/src/h
         ../common/src/include
+        ../common/src/roachpb
         third_party/gtest-1.8.1/fused-src
         third_party/brpc-1.9.0/src
         ${BRPC_OUTPUT_DIR}/include
         include
-        roachpb
         engine/include
         common/include
         storage/include
@@ -257,7 +205,6 @@ file(GLOB_RECURSE KWDBTS2_SERVER_LIB_SRC
         common/src/*.cpp
         exec/src/*.cpp
         storage/src/*.cpp
-        roachpb/*.cc
         engine/*.cpp
         mmap/src/*.cpp
         mmap/src/lib/*.c
@@ -269,7 +216,6 @@ else ()
             common/src/*.cpp
             exec/src/*.cpp
             storage/src/*.cpp
-            roachpb/*.cc
             engine/*.cpp
             mmap/src/*.cpp
             mmap/src/lib/*.c
