--- a/kwdbap/CMakeLists.txt
+++ b/kwdbap/CMakeLists.txt
@@ -746,6 +746,9 @@ include_directories(third_party/mbedtls/include)
 include_directories(third_party/jaro_winkler)
 include_directories(third_party/yyjson/include)
 include_directories(third_party/zstd/include)
+include_directories(../common/src/h)
+include_directories(../common/src/include)
+include_directories(../common/src/roachpb)
 
 # todo only regenerate ub file if one of the input files changed hack alert
 function(enable_unity_build UB_SUFFIX SOURCE_VARIABLE_NAME)
