--- a/kwdbap/CMakeLists.txt
+++ b/kwdbap/CMakeLists.txt
@@ -1596,7 +1596,7 @@ if(NOT CLANG_TIDY)
 endif()
 
 # Write the export set for build and install tree
-install(EXPORT "${DUCKDB_EXPORT_SET}" DESTINATION "${INSTALL_CMAKE_DIR}")
+# install(EXPORT "${DUCKDB_EXPORT_SET}" DESTINATION "${INSTALL_CMAKE_DIR}")
 export(EXPORT "${DUCKDB_EXPORT_SET}"
        FILE "${PROJECT_BINARY_DIR}/${DUCKDB_EXPORT_SET}.cmake")
 
@@ -1624,8 +1624,8 @@ if(EXISTS ${CMAKE_CONFIG_TEMPLATE} AND EXISTS ${CMAKE_CONFIG_VERSION_TEMPLATE})
                  "${PROJECT_BINARY_DIR}/DuckDBConfigVersion.cmake" @ONLY)
 
   # Install the cmake package
-  install(
-    FILES "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/DuckDBConfig.cmake"
-          "${PROJECT_BINARY_DIR}/DuckDBConfigVersion.cmake"
-    DESTINATION "${INSTALL_CMAKE_DIR}")
+  # install(
+  #   FILES "${PROJECT_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/DuckDBConfig.cmake"
+  #         "${PROJECT_BINARY_DIR}/DuckDBConfigVersion.cmake"
+  #   DESTINATION "${INSTALL_CMAKE_DIR}")
 endif()
