--- a/kwdbap/src/engine/CMakeLists.txt
+++ b/kwdbap/src/engine/CMakeLists.txt
@@ -1,8 +1,11 @@
 add_library_unity(
-  duckdb_engine
-  OBJECT
-  db.cpp
-  duckdb_exec.cpp)
+        duckdb_engine
+        OBJECT
+        db.cpp
+        duckdb_exec.cpp
+        ap_parse_query.cpp
+        ap_table_scan.cpp
+        ap_filters.cpp)
 set(ALL_OBJECT_FILES
-    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_engine>
-    PARENT_SCOPE)
+        ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_engine>
+        PARENT_SCOPE)
