--- a/kwdbap/CMakeLists.txt
+++ b/kwdbap/CMakeLists.txt
@@ -746,6 +746,7 @@ include_directories(third_party/mbedtls/include)
 include_directories(third_party/jaro_winkler)
 include_directories(third_party/yyjson/include)
 include_directories(third_party/zstd/include)
+include_directories(third_party/xsimd/include)
 include_directories(../common/src/h)
 include_directories(../common/src/include)
 include_directories(../common/src/roachpb)
