--- a/kwdbts2/CMakeLists.txt
+++ b/kwdbts2/CMakeLists.txt
@@ -283,6 +283,7 @@ set(THIRD_PARTY_DIR ${CMAKE_CURRENT_BINARY_DIR}/third_party)
 set(SNAPPY_INSTALL_DIR ${THIRD_PARTY_DIR}/snappy_install)
 set(SNAPPY_CMAKE_ARGS
   -DCMAKE_INSTALL_PREFIX=${SNAPPY_INSTALL_DIR}
+  -DCMAKE_INSTALL_LIBDIR=lib
   -DCMAKE_CXX_STANDARD=17
   -DSNAPPY_BUILD_TESTS=OFF
   -DCMAKE_POSITION_INDEPENDENT_CODE=ON
