fix:fix git modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,10 @@
 [submodule "kwbase/vendor"]
 	path = kwbase/vendor
-	url = https://gitee.com/kwdb/kw-vendor.git
-	branch = 2.0-master
+	## todo:
+	## url = https://gitee.com/kwdb/kw-vendor.git
+	## branch = 2.0-master
+	url =  https://gitee.com/kaiwuDB/kw-vendor.git
+	branch = duckdb-vendor
 [submodule "kwbase/c-deps"]
 	path = kwbase/c-deps
 	url = https://gitee.com/kwdb/kw-cdeps.git
