fix:fix git module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,7 @@
 [submodule "kwbase/vendor"]
 	path = kwbase/vendor
-	## todo:
-	## url = https://gitee.com/kwdb/kw-vendor.git
-	## branch = 2.0-master
-	url =  https://gitee.com/kaiwuDB/kw-vendor.git
-	branch = duckdb-vendor
+	url = https://gitee.com/kwdb/kw-vendor.git
+	branch = 2.0-master
 [submodule "kwbase/c-deps"]
 	path = kwbase/c-deps
 	url = https://gitee.com/kwdb/kw-cdeps.git
