Adjust the execution architecture

--- a/kwdbap/src/engine/CMakeLists.txt
+++ b/kwdbap/src/engine/CMakeLists.txt
@@ -5,7 +5,10 @@ add_library_unity(
         duckdb_exec.cpp
         ap_parse_query.cpp
         ap_table_scan.cpp
-        ap_filters.cpp)
+        ap_filters.cpp
+        ap_processors.cpp
+        plan_transform.cpp
+        )
 set(ALL_OBJECT_FILES
         ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_engine>
         PARENT_SCOPE)
